Form linked to API

--- a/stock_modeling/quotes/templates/home.html
+++ b/stock_modeling/quotes/templates/home.html
@@ -6,6 +6,10 @@
 	{{ ticker }}
 {% endif %}
 
+{% if file_content %}
+	{{ file_content }}
+{% endif %}
+
 {% if api %}
 	{% if api == "Error..." %}
 		There was a problem with your ticker symbol.
