--- a/stock_modeling/quotes/templates/base.html
+++ b/stock_modeling/quotes/templates/base.html
@@ -13,31 +13,52 @@
   <body>
 
   	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home' %}">Stock Portfolio</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+        <a class="navbar-brand" href="{% url 'home' %}">Stock Portfolio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
- 
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'about' %}">About</a>
-      </li>
-      
-    </ul>
-    <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST"> 
-      {% csrf_token %}
-      <input class="form-control mr-sm-2" type="search" placeholder="Get Stock Quote" aria-label="Search" name="ticker">
-      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Stock Quote</button>
-    </form>
-  </div>
-</nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'about' %}">About</a>
+           </li>
+        </ul>
+        </div>
+    </nav>
 
   	<div class="container">
+      <br/><br/><br/><br/>
+      <form action="{% url 'home' %}" method="POST">
+        {% csrf_token %}
+        <div class="form-group row">
+          <label for="ticker" class="col-sm-2 col-form-label">Stock Ticker  : </label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="ticker" placeholder="Add Stock Ticker Symbol" name="ticker">
+          </div>
+        </div>
+        <div class="form-group row">
+           <label for="start_date" class="col-2 col-form-label" >Start Date  : </label>
+           <div class="col-sm-10">
+             <input class="form-control" type="date" id="start_date" min="2015-01-01" max="2021-01-01" name="start_date">
+           </div>
+        </div>
+        <div class="form-group row">
+           <label for="end_date" class="col-2 col-form-label">End Date  : </label>
+           <div class="col-sm-10">
+             <input class="form-control" type="date" id="end_date" min="2015-01-01" name="end_date">
+           </div>
+        </div>
+        <div class="form-group row">
+            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+        </div>
+      </form>
 	    {% block content %}
 		{% endblock %}
 	</div>
+
+    {% load static %}
+    <img src="{% static 'plots/historical_plot.jpg' %}" class="img-fluid" alt="Responsive image" style="width:1000px;height:600px;"/>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
