--- a/stock_modeling/quotes/templates/home.html
+++ b/stock_modeling/quotes/templates/home.html
@@ -1,33 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-{% if ticker %}
-	{{ ticker }}
-{% endif %}
-
-{% if file_content %}
-	<pre>
-		<!--<span style="white-space: pre-line">{{ file_content }}</span>-->
-		{{ file_content }}
-	</pre>
-{% endif %}
-
-{% if api %}
-	{% if api == "Error..." %}
-		There was a problem with your ticker symbol.
-		Please try again.
-	{% else %}
-
-		<h1>{{ api.companyName }}</h1><br/>
-		Price: {{ api.latestPrice }}<br/>
-		Previous Close: {{ api.previousClose }}<br/>
-		Market Cap: {{ api.marketCap }}<br/>
-		YTD change: {{ api.ytdChange }}<br/>
-		52Wk High: {{ api.week52High }}<br/>
-		52Wk Low: {{ api.week52Low }}<br/>
-
-	{% endif %}
-{% endif %}
+      <br/><br/><br/><br/>
+      <form action="{% url 'model' %}" method="POST">
+        {% csrf_token %}
+        <div class="form-group row">
+          <label for="ticker" class="col-sm-2 col-form-label">Stock Ticker  : </label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="ticker" placeholder="Add Stock Ticker Symbol" name="ticker">
+          </div>
+        </div>
+        <div class="form-group row">
+           <label for="start_date" class="col-2 col-form-label" >Start Date  : </label>
+           <div class="col-sm-10">
+             <input class="form-control" type="date" id="start_date" min="2015-01-01" max="2021-01-01" name="start_date">
+           </div>
+        </div>
+        <div class="form-group row">
+           <label for="end_date" class="col-2 col-form-label">End Date  : </label>
+           <div class="col-sm-10">
+             <input class="form-control" type="date" id="end_date" min="2015-01-01" name="end_date">
+           </div>
+        </div>
+        <div class="form-group row">
+            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+        </div>
+      </form>
 
 {% endblock %}
+
