--- a/stock_modeling/quotes/templates/model.html
+++ b/stock_modeling/quotes/templates/model.html
@@ -26,6 +26,8 @@
 
     {% load static %}
         <img src="{% static 'plots/historical_plot.jpg' %}" class="img-fluid" alt="Responsive image"/>
+        <img src="{% static 'plots/returns_plot.jpg' %}" class="img-fluid" alt="Responsive image"/>
+        <img src="{% static 'plots/forecast_vs_actual.jpg' %}" class="img-fluid" alt="Responsive image"/>
 
     <br/><br/>
     <div class="card">
