--- a/stock_modeling/quotes/templates/model.html
+++ b/stock_modeling/quotes/templates/model.html
@@ -27,6 +27,10 @@
     {% load static %}
         <img src="{% static 'plots/historical_plot.jpg' %}" class="img-fluid" alt="Responsive image"/>
         <img src="{% static 'plots/returns_plot.jpg' %}" class="img-fluid" alt="Responsive image"/>
+        <br/>
+        <br/>
+        <br/>
+        <h4> Model Forecast vs Actual Price over given Time Range </h4>
         <img src="{% static 'plots/forecast_vs_actual.jpg' %}" class="img-fluid" alt="Responsive image"/>
 
     <br/><br/>
