cards colour added

--- a/stock_modeling/quotes/templates/model.html
+++ b/stock_modeling/quotes/templates/model.html
@@ -60,9 +60,9 @@
 
     <br/><br/>
     <div class="card" style="text-align:center;">
-        <div class="card-body bg-dark text-white">
+        <div class="card-body bg-dark">
             {% if file_content %}
-	            <pre>
+	            <pre class="text-white">
 		            {{ file_content }}
 	            </pre>
             {% endif %}
@@ -71,9 +71,9 @@
 
     <br/><br/>
     <div class="card" style="text-align:center;">
-        <div class="card-body bg-dark text-white">
+        <div class="card-body bg-dark">
             {% if file_content1 %}
-	            <pre>
+	            <pre class="text-white">
 		            {{ file_content1 }}
 	            </pre>
             {% endif %}
